# Barony

./: .gitignore  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  EDITING.txt  HELO_ONLY_CHUNKING_PLAN.md  INSTALL.md  INSTALL.txt  InstallToSwitch.bat  LICENSE.libtheora.txt  LICENSE.libtheoraplayer.txt  LICENSE.nativefiledialog.txt  LICENSE.physfs.txt  LICENSE.txt  README-CLion.md  README.md  README.original.txt  README.txt  RELEASE.txt  Readme.md  barony.icns  barony.rc  classes.json  common.props  editor.icns  editor.rc  npcnames-female.txt  npcnames-male.txt  playernames-female.txt  playernames-male.txt  setup_barony_vs2022_x64.ps1  styleguide.txt  vcpkg.json
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build-linux_fmod_steam.yml  build-linux_fmod_steam_eos.yml  build-windows_fmod_steam.yml
VS/: Barony.sln
VS-includes/: Config.hpp
VS.2015/: Barony.sln
VS.2015/Barony/: Barony.vcxproj  Barony.vcxproj.filters  log.txt
VS.2015/editor/: editor.vcxproj  editor.vcxproj.filters
VS/Barony/: Barony.vcxproj  Barony.vcxproj.filters
ci/: build-linux_fmod_steam-editor.sh  build-linux_fmod_steam.sh  build-linux_fmod_steam_eos-barony.sh  clean-linux.sh
cippie-devstuff/: Dragon Toast.txt  Modifications and changes and things to be made eventually  README.txt  TODO-old-master-official  TODO.txt  bobby the troll  extradimensional shops.txt  kill zone  learning magic.txt  magic ideas.txt  magic shields.txt  magic spells.txt  magic system draft.txt  minotaur.txt  potatomancy  secret classes and magic and spells and items.txt  suplex.txt  types of spell failure  unorthodox weapons
cippie-devstuff/DEV/: CURRENT WORK.txt
cippie-devstuff/magic system/: casting mode
cippie-devstuff/summoning/: logs.txt
cmake/Modules/: FindEOS.cmake  (+20 more)
docker/: Dockerfile  build-linux.sh  docker-compose.yml
docs/: extended-multiplayer-balancing-and-tuning-plan.md  multiplayer-expansion-verification-plan.md  pr940-pr-splitting-plan.md
images/: sprites.txt  tiles.txt
lang/: book_names.json  en.txt  item_names.json
merge-prs/: PR1-platform-build-baseline.md  PR10-default-enablement-release-notes.md  PR2-super-multiplayer-feature-gate.md  PR3-player-slot-mapping-refactor.md  PR4-lobby-join-protocol-hardening.md  PR5-status-effect-owner-encoding-hardening.md  PR6-smoke-framework-compile-gating.md  PR7-smoke-runner-lanes-non-mapgen.md  PR8-mapgen-telemetry-integration-plumbing.md  PR9-mapgen-balance-tuning-5p-15p.md
scripts/: build_theoraplayer.sh  launch-multi-instance-mac.sh
scripts/theoraplayer/: CMakeLists.txt
src/: CMakeLists.txt  Config.hpp.in  Directory.hpp  UnicodeDecoder.h  actarrow.cpp  actarrowtrap.cpp  actbeartrap.cpp  actboulder.cpp  actcampfire.cpp  actchest.cpp  actdoor.cpp  actflame.cpp  actfountain.cpp  actgate.cpp  actgeneral.cpp  actgib.cpp  actgold.cpp  actheadstone.cpp  acthudweapon.cpp  actitem.cpp  actladder.cpp  actmagictrap.cpp  actmonster.cpp  actpedestal.cpp  actplayer.cpp  actpowercrystal.cpp  actsink.cpp  actspeartrap.cpp  actsprite.cpp  actsummontrap.cpp  actteleporter.cpp  actthrown.cpp  acttorch.cpp  actwallbuster.cpp  book.cpp  book.hpp  buttons.cpp  charclass.cpp  charclass.hpp  classdescriptions.hpp  (+133 more)
src/engine/: CMakeLists.txt  filepc.hpp
src/engine/audio/: CMakeLists.txt  defines.cpp  init.cpp  init_audio.cpp  music.cpp  music_pc.hpp  sound.cpp  sound.hpp  sound_game.cpp
src/imgui/: CMakeLists.txt  imgui.cpp  imgui_impl_opengl3_loader.h  imgui_impl_sdl.cpp
src/interface/: AppraisalGUI.cpp  AppraisalGUI.hpp  CMakeLists.txt  ItemModifyingGUI.cpp  ItemModifyingGUI.hpp  bookgui.cpp  clickdescription.cpp  consolecommand.cpp  consolecommand.hpp  drawminimap.cpp  drawstatus.cpp  identify_and_appraise.cpp  interface.cpp  interface.hpp  magicgui.cpp  playerinventory.cpp  removecurse.cpp  screenshot.cpp  shopgui.cpp  ui.hpp  ui_general.cpp  updatecharactersheet.cpp  updatechestinventory.cpp  updaterightsidebar.cpp
src/magic/: CMakeLists.txt  act_HandMagic.cpp  actmagic.cpp  castSpell.cpp  magic.cpp  magic.hpp  setupSpells.cpp  spell.cpp
src/smoke/: SmokeHooksCombat.cpp  SmokeHooksCommon.hpp  SmokeHooksGameUI.cpp  SmokeHooksGameplay.cpp  SmokeHooksMainMenu.cpp  SmokeHooksMapgen.cpp  SmokeHooksNet.cpp  SmokeHooksSaveReload.cpp  SmokeTestHooks.cpp  SmokeTestHooks.hpp
src/ui/: Button.cpp  Button.hpp  CMakeLists.txt  Field.cpp  Field.hpp  Font.cpp  Font.hpp  Frame.cpp  Frame.hpp  GameUI.cpp  GameUI.hpp  Image.cpp  Image.hpp  LoadingScreen.cpp  LoadingScreen.hpp  MainMenu.cpp  MainMenu.hpp  Slider.cpp  Slider.hpp  Text.cpp  Text.hpp  Widget.cpp  Widget.hpp
tests/smoke/: README.md  generate_mapgen_heatmap.py  generate_smoke_aggregate_report.py  pyproject.toml  run_helo_adversarial_smoke_mac.sh  run_lan_helo_chunk_smoke_mac.sh  run_lan_helo_soak_mac.sh  run_lan_join_leave_churn_smoke_mac.sh  run_lobby_kick_target_smoke_mac.sh  run_lobby_page_navigation_smoke_mac.sh  run_lobby_slot_lock_and_kick_copy_smoke_mac.sh  run_mapgen_level_matrix_mac.sh  run_mapgen_sweep_mac.sh  run_remote_combat_slot_bounds_smoke_mac.sh  run_save_reload_compat_smoke_mac.sh  run_splitscreen_baseline_smoke_mac.sh  run_splitscreen_cap_smoke_mac.sh  run_status_effect_queue_init_smoke_mac.sh  smoke_runner.py
tests/smoke/lib/: common.sh
tests/smoke/smoke_framework/: __init__.py  churn_join_leave.py  churn_statusfx_lane.py  churn_statusfx_parser.py  common.py  core_helo_adversarial_lane.py  core_helo_soak_lane.py  core_lane.py  core_lobby_kick_target_lane.py  core_parser.py  core_runtime.py  core_save_reload_compat_lane.py  csvio.py  fs.py  helo_metrics.py  lan_helo_chunk_args.py  lan_helo_chunk_lane.py  lan_helo_chunk_launch.py  lan_helo_chunk_parser.py  lan_helo_chunk_post.py  lan_helo_chunk_runtime.py  lan_helo_chunk_summary.py  lane_helpers.py  lane_matrix.py  lane_status.py  lobby_remote_lane.py  lobby_remote_parser.py  local_lane.py  logscan.py  mapgen.py  mapgen_matrix_lane.py  mapgen_parser.py  mapgen_runtime.py  mapgen_schema.py  mapgen_sweep_lane.py  mapgen_validation.py  orchestration.py  parser_common.py  process.py  reports.py  (+10 more)
tests/smoke/tests/: test_framework_helpers.py
(+32 files in other folders)
